# clean-browser

./: .gitignore  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
electron/: main.cjs  preload.cjs  settings-preload.cjs  settings.html
homebrew/: clean-browser.rb
landing/: index.html
src/: backdrop.ts  capture.ts  clean-browser-api.d.ts  color.ts  compose.ts  constants.ts  dom.ts  main.ts  navigation.ts  runtime.ts  state.ts  styles.css  theme.ts  types.ts  ui.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
