[package]
name = "clean-browser"
version = "0.1.0"
description = "A minimal screenshot-focused browser shell."
authors = ["HELMLAB"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["unstable"] }
xcap = "0.9.6"
